# DWDM-project

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  project_info.md  requirements.txt
app/: streamlit_app.py
autonomous_sql_agent/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
autonomous_sql_agent/.github/workflows/: ci.yml  security.yml
autonomous_sql_agent/configs/: config.yaml
autonomous_sql_agent/configs/data/: default.yaml
autonomous_sql_agent/configs/experiment/: baseline.yaml
autonomous_sql_agent/configs/model/: default.yaml
autonomous_sql_agent/configs/optim/: default.yaml
autonomous_sql_agent/docs/: README.md  reproducibility.md
autonomous_sql_agent/scripts/: download_data.py  eval.py  train.py
autonomous_sql_agent/src/autonomous_sql_agent/: __init__.py
autonomous_sql_agent/src/autonomous_sql_agent/data/: datasets.py  preprocessing.py
autonomous_sql_agent/src/autonomous_sql_agent/models/: model.py
autonomous_sql_agent/src/autonomous_sql_agent/tracking/: __init__.py  csv_tracker.py  unified.py
autonomous_sql_agent/src/autonomous_sql_agent/training/: __init__.py  callbacks.py  evaluate.py  train.py
autonomous_sql_agent/src/autonomous_sql_agent/utils/: __init__.py  logging_setup.py  paths.py  seeding.py
autonomous_sql_agent/tests/: __init__.py  conftest.py  test_data.py  test_models.py  test_training.py
data/: warehouse_schema.sql
docs/: architecture.md  project_presentation.html  project_report.html
paper/: paper-outline.md  paper.tex  references.bib
report/: presentation.html  references.bib  report.tex
(+22 files in other folders)
